2008-04-22  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_channelextract.c: Fix number of channels in output.
	* cvtool/cmd_convert.c: Keep frame format if -f is not used.
	* cvl/cvl/cvl_visualization.h, cvl/cvl_visualization.c,
	cvtool/cmd_visualize.c, tests/cmd_visualize.sh: Remove the defunct
	needle visualization code.
	* cvl/cvl_io.c: Fix writing of PNM frames with three channels and
	format CVL_UNKNOWN.

2008-04-21  Martin Lambers <marlam@marlam.de>

	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
	four channels.
	* cvl/cvl/cvl_color.h, cvl/cvl_color.c: New function
	cvl_convert_format_forced().
	* configure.ac: Bump library version number.
	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
	two channels.

2008-04-19  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_frame.c: Explicitly convert the frame in
	cvl_frame_set_type(). Do not defer conversion to the next usage of the
	frame, because then it might be done over and over again. This fixes
	a performance problem in CVLView.

2008-04-18  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_gl.c: Save both modelview and projection matrix in
	cvl_gl_state_save().
	* configure.ac, doc/cvl.texi, doc/cvtool.texi: Bump version to 0.2.4.

2008-04-14  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_intern.c: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for all
	textures.

2008-03-05  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/doxy/Makefile.am, doc/doxy/doxyfile.in,
	doc/doxy/cvl-reference: Clean up rules for doxygen.
	* NEWS: Update.
	* doc/doxy/doxyfile.in, doc/doxy/Makefile.am: Add a reference in PDF
	format.

2008-03-04  Martin Lambers <marlam@marlam.de>

	* mhlib/Makefile.am, cvl/Makefile.am, cvtool/Makefile.am: Do not break
	VPATH builds.
	* cvl/Makefile.am: Make GLSL rule more robust.
	* tests/*: Enable tests for VPATH builds.
	* doc/Makefile.am: Cleanup.

2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.
